; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/tip/libacu/extr_dn11.c_dn_disconnect.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/tip/libacu/extr_dn11.c_dn_disconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FD = common dso_local global i64 0, align 8
@TIOCCDTR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dn_disconnect() #0 {
  %1 = call i32 @sleep(i32 2)
  %2 = load i64, i64* @FD, align 8
  %3 = icmp sgt i64 %2, 0
  br i1 %3, label %4, label %8

4:                                                ; preds = %0
  %5 = load i64, i64* @FD, align 8
  %6 = load i32, i32* @TIOCCDTR, align 4
  %7 = call i32 @ioctl(i64 %5, i32 %6, i32 0)
  br label %8

8:                                                ; preds = %4, %0
  %9 = load i64, i64* @FD, align 8
  %10 = call i32 @close(i64 %9)
  ret void
}

declare dso_local i32 @sleep(i32) #1

declare dso_local i32 @ioctl(i64, i32, i32) #1

declare dso_local i32 @close(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
